Error Mitigation/MagiCoder/Data/java_applet/java_appletOutputResult.txt
Sample: Applet_1
----------------------------------------------------------------
output:
./Data/java_applet/javaFiles/Applet_1.java:4: error: class MyApplet is public, should be declared in a file named MyApplet.java
public class MyApplet extends Applet {
       ^
./Data/java_applet/javaFiles/Applet_1.java:4: warning: [removal] Applet in java.applet has been deprecated and marked for removal
public class MyApplet extends Applet {
                              ^
1 error
1 warning


================================================================

Sample: Applet_2
----------------------------------------------------------------
output:
./Data/java_applet/javaFiles/Applet_2.java:4: error: class MyApplet is public, should be declared in a file named MyApplet.java
public class MyApplet extends Applet {
       ^
./Data/java_applet/javaFiles/Applet_2.java:4: warning: [removal] Applet in java.applet has been deprecated and marked for removal
public class MyApplet extends Applet {
                              ^
1 error
1 warning


================================================================

Sample: Applet_3
----------------------------------------------------------------
output:
./Data/java_applet/javaFiles/Applet_3.java:4: error: class MyApplet is public, should be declared in a file named MyApplet.java
public class MyApplet extends Applet {
       ^
./Data/java_applet/javaFiles/Applet_3.java:4: warning: [removal] Applet in java.applet has been deprecated and marked for removal
public class MyApplet extends Applet {
                              ^
1 error
1 warning


================================================================

Sample: Applet_4
----------------------------------------------------------------
output:
./Data/java_applet/javaFiles/Applet_4.java:4: error: class MyApplet is public, should be declared in a file named MyApplet.java
public class MyApplet extends Applet {
       ^
./Data/java_applet/javaFiles/Applet_4.java:4: warning: [removal] Applet in java.applet has been deprecated and marked for removal
public class MyApplet extends Applet {
                              ^
1 error
1 warning


================================================================

